# utility-skills

./: .gitignore  README.md
audio-transcribe/: .env.example  README.md  SKILL.md  pyproject.toml
audio-transcribe/scripts/: transcribe.py
exa-plus/: SKILL.md
exa-plus/scripts/: search.sh
image-generate/: README.md  SKILL.md  pyproject.toml
image-generate/scripts/: generate.py
