[project]
name = "audio-transcribe"
version = "1.0.0"
description = "Transcribe video/audio files to timestamped text using Groq Whisper API"
requires-python = ">=3.10"
dependencies = [
    "groq>=0.18.0",
    "static-ffmpeg>=2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
